# image-annotation

./: .gitignore  Cargo.toml  build.rs  initial.sql  tailwind.config.js
public/: image.js
src/: api.rs  lib.rs  main.rs  templates.rs
templates/: base.html  help.html  image.html  macros.html  no_images.html  upload.html
