[package]
name = "image-annotation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
aws-config = "1.5.1"
aws-sdk-s3 = "1.36.0"
axum = { version = "0.7.5", features = ["multipart"] }
dotenvy = "0.15.7"
futures = "0.3.30"
libsql = "0.4.0"
multer = "3.1.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
